Fixed the CSS for char-component, thus allowing content from the container it has to not wrap or reach for parent components. Added to the char-generation component a way to separete passive and skill names from it content, thus making the words before the first ':' the name, and the rest it's content when there is a ':' in the input's value.

--- a/frontend/src/app/second-section/Binding/char-generation/char-component/char-component.component.css
+++ b/frontend/src/app/second-section/Binding/char-generation/char-component/char-component.component.css
@@ -1,7 +1,14 @@
 .multi-elements {
-    display: flex;
     flex-wrap: nowrap;
+    display: flex;
 }
+
+.multi-elements p {
+    width: 100%;
+    margin-right: 2%;
+}
+
+
 .charSheet {
     display: block;
     margin-right: 0%;
@@ -14,8 +21,17 @@
 
 .charSheet p{
     border-right: solid 3px black;
+    flex-wrap: nowrap;
 }
 
 .charSheet h5{
     border-right: solid 3px black;
+}
+
+/* .charTexts{
+    flex-wrap: nowrap;
+} */
+
+strong {
+    display: inline;
 }
